Update: setting up the application.properties

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,1 +1,12 @@
+# データベースへの接続設定
+spring.datasource.driver-class-name     = com.mysql.cj.jdbc.Driver
+spring.datasource.url                   = ${SPRING_DATASOURCE_URL}
+spring.datasource.username              = ${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password              = ${SPRING_DATASOURCE_PASSWORD}
 
+# spring securityの認証設定
+spring.security.user.name               = admin
+spring.security.user.password           = javatter
+
+# spring Boot 2.2.0に更新したときにput/deleteメソッドが動かない問題を対処
+spring.mvc.hiddenmethod.filter.enabled  = true
