--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # データベースへの接続設定
 spring.datasource.driver-class-name     = com.mysql.cj.jdbc.Driver
-spring.datasource.url                   = ${SPRING_DATASOURCE_URL}
-spring.datasource.username              = ${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password              = ${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url                   = jdbc:mysql://rds-mysql-server-headbanding.cmta6klhdst4.ap-northeast-1.rds.amazonaws.com/Javatter
+spring.datasource.username              = javatter
+spring.datasource.password              = javatter20200609
 
 # spring securityの認証設定
 spring.security.user.name               = admin
