--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 # データベースへの接続設定
+spring.datasource.sql-script-encoding   = UTF-8
 spring.datasource.driver-class-name     = com.mysql.cj.jdbc.Driver
 spring.datasource.url                   = ${SPRING_DATASOURCE_URL}
 spring.datasource.username              = ${SPRING_DATASOURCE_USERNAME}
@@ -10,3 +11,7 @@ spring.security.user.password           = javatter
 
 # spring Boot 2.2.0に更新したときにput/deleteメソッドが動かない問題を対処
 spring.mvc.hiddenmethod.filter.enabled  = true
+
+# アプリケーション起動時にデータベースを初期化しないようにする
+spring.jpa.hibernate.ddl-auto           = update
+
