Update: for inserting into DB at startup

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -5,6 +5,9 @@ spring.datasource.url                   = ${SPRING_DATASOURCE_URL}
 spring.datasource.username              = ${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password              = ${SPRING_DATASOURCE_PASSWORD}
 
+# src/main/resources/data.sql をサーバー起動時に毎回実行する設定
+spring.datasource.initialization-mode   = always
+
 # spring securityの認証設定
 spring.security.user.name               = admin
 spring.security.user.password           = javatter
@@ -14,4 +17,3 @@ spring.mvc.hiddenmethod.filter.enabled  = true
 
 # アプリケーション起動時にデータベースを初期化しないようにする
 spring.jpa.hibernate.ddl-auto           = update
-
