--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -17,3 +17,6 @@ spring.mvc.hiddenmethod.filter.enabled  = true
 
 # アプリケーション起動時にデータベースを初期化しないようにする
 spring.jpa.hibernate.ddl-auto           = update
+
+# spring session jdbc の設定
+spring.session.store-type               = jdbc
