--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,9 +1,9 @@
 # データベースへの接続設定
 spring.datasource.sql-script-encoding   = UTF-8
 spring.datasource.driver-class-name     = com.mysql.cj.jdbc.Driver
-spring.datasource.url                   = ${SPRING_DATASOURCE_URL}
-spring.datasource.username              = ${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password              = ${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url                   = jdbc:mysql://rds-mysql-server-headbanding.cmta6klhdst4.ap-northeast-1.rds.amazonaws.com/Javatter
+spring.datasource.username              = javatter
+spring.datasource.password              = javatter20200609
 
 # src/main/resources/data.sql をサーバー起動時に毎回実行する設定
 spring.datasource.initialization-mode   = always
