--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// thymleaf内で認証を扱う為
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
@@ -33,7 +37,6 @@ dependencies {
 	}
 	testImplementation 'org.springframework.security:spring-security-test'
 	compile "org.modelmapper:modelmapper:2.3.0"
-	compile 'org.springframework.session:spring-session-jdbc'
 }
 
 test {
